# stereo-adc-dac

./: .gitmodules  README.md  boban.heic
src/: sdkconfig  sdkconfig copy  ui.c  ui.h  ui_helpers.c
src/components/lvgl_esp32_drivers/: component.mk  lvgl_helpers.h
src/main/: CMakeLists.txt  main.c
src/main/ParamEQ/: ParamEQ.c  ParamEQ.h
src/screens/: ui_Screen1.c
src/screens/v2/: ui_Screen1.c
test-codes/encoder-test/: CMakeLists.txt  sdkconfig  sdkconfig.old
test-codes/encoder-test/main/: main.c
test-codes/esp-audio-test-2/: CMakeLists.txt
test-codes/esp-audio-test-2/main/: CMakeLists.txt  idf_component.yml  tusb_hid_example_main.c
test-codes/esp-usb-audio-test/: CMakeLists.txt
test-codes/esp-usb-audio-test/src/: main.c
test-codes/esp-usb-audio-test2/: CMakeLists.txt
test-codes/i2c-test/: CMakeLists.txt  sdkconfig  sdkconfig.old
test-codes/i2c-test/main/: main.c
test-codes/i2c/main/: main.c
test-codes/i2s-test/: CMakeLists.txt  sdkconfig  sdkconfig.old
test-codes/i2s-test/main/: CMakeLists.txt  i2s_std_example_main.c  main.c  main_old.c
test-codes/lcd-enc/: CMakeLists.txt  backsdkconfig  sdkconfig  sdkconfig.old  ui.c  ui_helpers.h
test-codes/lcd-enc/components/: ui_comp_hook.c
test-codes/lcd-enc/main/: CMakeLists.txt  idf_component.yml  main.c
test-codes/lcd-enc/screens/: ui_Screen1.c
test-codes/lvgl-test/: CMakeLists.txt  sdkconfig  sdkconfig.old  ui.h  ui_events.h
test-codes/lvgl-test/.vscodedog/: settings.json
test-codes/lvgl-test/images/: ui_img_logo_png.c
test-codes/lvgl-test/main/: CMakeLists.txt  main.c  (+1 more)
(+26 files in other folders)
